--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -60,6 +60,18 @@
     <div class="col-md-3">
         <div class="panel panel-primary text-center no-boder bg-color-red">
             <div class="panel-body">
+                <i class="fa fa-money fa-5x"></i>
+                <h6>Globales <%= Concepto.all.length%></h6>
+                <h6>Personales <%= Conceptopersonal.all.length%></h6>
+            </div>
+            <div class="panel-footer back-footer-red">
+                Conceptos
+            </div>
+        </div>
+    </div>
+    <div class="col-md-3">
+        <div class="panel panel-primary text-center no-boder bg-color-red">
+            <div class="panel-body">
                 <i class="fa fa-envelope fa-5x"></i>
                 <h4>
                     <div class="btn-group btn-group-xs form-inline" role="group" aria-label="...">
@@ -90,7 +102,7 @@
     <div class="col-md-12">
                     <div class="panel panel-default">
                         <div class="panel-heading">
-                            <i class="fa fa-bar-chart-o fa-fw"></i> Estadisticas (ultimos 5 meses)
+                            <i class="fa fa-bar-chart-o fa-fw"></i> Estadísticas (últimos 5 meses)
 
                         </div>
                         <!-- /.panel-heading -->
