--- a/app/views/personas/_personas.html.erb
+++ b/app/views/personas/_personas.html.erb
@@ -6,11 +6,11 @@
     <thead>
       <tr>
         <th class= "actions" style="width: 120px;">Cédula</th>
-        <th class= "actions">Nombres Completo</th>
+        <th class= "actions text-capitalize">Nombres Completo</th>
         <th class= "actions">Cargo</th>
         <th class= "actions">Departamento</th>
         <th class= "actions">Nómina</th>
-        <th class="actions" style="width: 250px;">Reporte</th>
+        <th class= "actions" style="width: 250px;">Reporte</th>
 
         <th class="actions" style="width: 80px;">Acciones</th>
       </tr>
