Corrección de mailer

--- a/app/views/persona_mailer/recibo.html.erb
+++ b/app/views/persona_mailer/recibo.html.erb
@@ -1,2 +1,4 @@
-Estimado, <%=@persona.nombres.upcase%> <%=@persona.apellidos.upcase%>.
+Estimado empleado(a), <b><%=@persona.nombres.upcase%> <%=@persona.apellidos.upcase%></b>.
 Se le ha enviado su recibo de pago correspondiente a la <%=$dic["quincena"].key($quincena).capitalize%> de <%=$dic["meses"].key($ahora.month).capitalize%> de <%=$ahora.year%>.
+
+<b>Coordinación de RRHH - FUNSONE</b>
