--- a/app/views/layouts/_acercade.html.erb
+++ b/app/views/layouts/_acercade.html.erb
@@ -14,7 +14,7 @@
                 <h1> <img class="text-center" src="/assets/logo.png" alt="" />FUNSONE NÓMINA</h1>
                 <dl class="dl-horizontal" >
                   <dt>Descripción <span class="fa fa-bars fa-fw"></span></dt>
-                  <dd style="text-align:justify;">Sistema bajo ambiente web para el control de empleados y gestión de nóminas de la Fundacion Social Nueva Esparta.</dd>
+                  <dd style="text-align:justify;">Sistema bajo ambiente web para el control de empleados y gestión de nóminas de la Fundación Social Nueva Esparta.</dd>
                 <dt>Versión <span class="fa fa-code fa-fw"></span></dt>
                 <dd>1.0.0</dd>
 
