--- a/app/views/personas/show.html.erb
+++ b/app/views/personas/show.html.erb
@@ -283,14 +283,14 @@ end
 </div>
 <%end%>
 
-<!--<% if @persona.status!='retirado'%>
-<% @persona.asignaciones.each do |c| %>
+<% if @persona.status!='retirado'%>
+<% @empleado.asignaciones.each do |c| %>
 <% next unless c['extra'] %>
 <div class="col-sm-8">
 <ul class="list-group">
 <li class="list-group-item text-muted" contenteditable="false">
     <i class="fa fa-file-text-o"></i>
-    Extras</li>
+    <%= 'Extra Quincena Actual ('+$ahora.month.to_s+'/'+$ahora.year.to_s+')'%></li>
 <li class="list-group-item">
     <table class="table table-hover table-condensed">
         <thead>
@@ -313,7 +313,7 @@ end
             <tr>
                 <th></th>
                 <th class="text-right"><%=tr(c['valor'])%></th>
-                <th></th>
+                <th class="text-right">0.00</th>
                 <th class="text-right"><%=tr(c['valor'])%></th>
             </tr>
         </tbody>
@@ -322,7 +322,45 @@ end
 </ul>
 </div>
 <%end%>
-<%end%>-->
+<% @empleado.deducciones.each do |c| %>
+<% next unless c['extra'] %>
+<div class="col-sm-8">
+<ul class="list-group">
+<li class="list-group-item text-muted" contenteditable="false">
+    <i class="fa fa-file-text-o"></i>
+    <%= 'Extra Quincena Actual ('+$ahora.month.to_s+'/'+$ahora.year.to_s+')'%></li>
+<li class="list-group-item">
+    <table class="table table-hover table-condensed">
+        <thead>
+            <tr>
+                <th>CONCEPTO</th>
+                <th class="text-right" style="width: 22%;">ASIGNACIÓN</th>
+                <th class="text-right" style="width: 22%;">DEDUCCIÓN</th>
+                <th class="text-right" style="width: 22%;">TOTAL</th>
+            </tr>
+        </thead>
+
+        <tbody>
+            <tr>
+                <td><%= c['nombre'].upcase%></td>
+                <td></td>
+                <td class="text-right"><%=tr(c['valor'])%></td>
+                <td></td>
+            </tr>
+
+            <tr>
+                <th></th>
+                <th class="text-right">0.00</th>
+                <th class="text-right"><%=tr(c['valor'])%></th>
+                <th class="text-right"><%=tr(c['valor'])%></th>
+            </tr>
+        </tbody>
+    </table>
+</li>
+</ul>
+</div>
+<%end%>
+<%end%>
 
 <% if @persona.familiares.length>0 %>
 <div class="col-sm-8">
