--- a/app/views/layouts/_acercade.html.erb
+++ b/app/views/layouts/_acercade.html.erb
@@ -16,18 +16,12 @@
                   <dt>Descripción <span class="fa fa-bars fa-fw"></span></dt>
                   <dd style="text-align:justify;">Sistema bajo ambiente web para el control de empleados y gestión de nóminas de la Fundacion Social Nueva Esparta.</dd>
                 <dt>Versión <span class="fa fa-code fa-fw"></span></dt>
-                <dd>2016.05.31</dd>
+                <dd>1.0.0</dd>
 
                 <dt>Creado por <span class="fa fa-users fa-fw"></span></dt>
-                <dd>Victor Serrano <a href="#"><span class="fa fa-twitter"></span></a>
-                  <a href="#"><span class="fa fa-instagram"></span></a>
-                  <a href="#"><span class="fa fa-facebook"></span></a>
-                  <a href="#"><span class="fa fa-globe"></span></a>
+                <dd>Victor Serrano <a href="mailto:victorfidelserrano18@gmail.com"><span class="fa fa-envelope fa-fw"></span></a>
                 </dd>
-                <dd>Monica Huamani <a href="#"><span class="fa fa-twitter"></span></a>
-                  <a href="#"><span class="fa fa-instagram"></span></a>
-                  <a href="#"><span class="fa fa-facebook"></span></a>
-                  <a href="#"><span class="fa fa-globe"></span></a>
+                <dd>Monica Huamani <a href="mailto:mchuamanilopez@gmail.com"><span class="fa fa-envelope fa-fw"></span></a>
                 </dd>
               </dl>
 </div>
