--- a/app/views/cargos/_cargo.html.erb
+++ b/app/views/cargos/_cargo.html.erb
@@ -9,6 +9,7 @@
           <th class="actions">Nombre</th>
           <th class="actions">Departamento</th>
           <th class="actions">Sueldo Básico</th>
+          <th class="actions">Sueldo Normal</th>
           <th class="actions">Sueldo Integral</th>
           <th class="actions">Nómina</th>
           <th class="actions">Disponible</th>
@@ -21,6 +22,7 @@
           <td><%= cargo.nombre.upcase %></td>
           <td><%= cargo.departamento.nombre.upcase %></td>
           <td><%= tr(cargo.sueldos.last.monto) %></td>
+          <td><%= tr(cargo.sueldos.last.normal) %></td>
           <td><%= tr(cargo.sueldos.last.sueldo_integral) %></td>
           <td><%= cargo.tipo.nombre.upcase %></td>
           <td><%if cargo.disponible %>
