--- a/app/views/personas/show.html.erb
+++ b/app/views/personas/show.html.erb
@@ -101,6 +101,11 @@
         <strong class="">Sueldo Básico</strong>
       </span>
       <%= tr(@persona.cargo.sueldos.last.monto)%></li>
+      <li class="list-group-item text-right">
+        <span class="pull-left">
+          <strong class="">Sueldo Normal</strong>
+        </span>
+        <%= tr(@persona.cargo.sueldos.last.normal)%></li>
     <li class="list-group-item text-right">
       <span class="pull-left">
         <strong class="">Sueldo Integral</strong>
