--- a/app/views/cargos/show.html.erb
+++ b/app/views/cargos/show.html.erb
@@ -12,7 +12,7 @@
     </h4>
     <h4>
     <b>Desde:</b>
-    <%= ocupado_por.contrato.fecha_inicio%>
+    <%= ocupado_por.contrato.fecha_inicio.strftime("%d-%m-%Y")%>
     <%end%>
   </h4>
 </div>
