--- a/app/views/conceptos/_form.html.erb
+++ b/app/views/conceptos/_form.html.erb
@@ -141,6 +141,9 @@
               <p>Sueldo base:
                 <code>sueldo</code>
               </p>
+              <p>Sueldo normal:
+                <code>normal</code>
+              </p>
               <p>Sueldo integral:
                 <code>sueldo_integral</code>
               </p>
