--- a/app/views/conceptospersonales/_conceptopersonal.html.erb
+++ b/app/views/conceptospersonales/_conceptopersonal.html.erb
@@ -9,7 +9,7 @@
                 <thead>
                     <tr>
                         <th class="actions">Nombre</th>
-                        <%if !current_usuario.has_role?:regular%>
+                      <%if current_usuario.has_role?:admin%>
                         <th class="actions" style="width: 100px;">Acciones</th>
                         <%end%>
                     </tr>
@@ -21,7 +21,7 @@
           asignaciones.each do |conceptopersonal| %>
                     <tr>
                         <td><%= conceptopersonal.nombre.capitalize %></td>
-                        <%if !current_usuario.has_role?:regular%>
+                        <%if current_usuario.has_role?:admin%>
                         <td>
                             <%= render 'layouts/actions', x: Conceptopersonal, y: edit_conceptopersonal_path(conceptopersonal), z: conceptopersonal %>
                         <%end%>
