--- a/app/views/cargos/_cargo.html.erb
+++ b/app/views/cargos/_cargo.html.erb
@@ -23,7 +23,7 @@
         <tr>
           <td><%= cargo.nombre.upcase %></td>
           <td><%= cargo.departamento.nombre.upcase %></td>
-          <td>
+          <td class="text-capitalize">
             <%if cargo.disponible%>
               Libre
             <%else%>
