arreglo recibo contratado detalles

--- a/app/views/conceptos/show.html.erb
+++ b/app/views/conceptos/show.html.erb
@@ -45,7 +45,7 @@
             <thead>
                 <tr>
                     <th class="actions">Fórmula empleado</th>
-                    <th class="actions">Fórmula aporte del empleador</th>
+                    <th class="actions">Fórmula (Aporte patronal)</th>
                     <th class="actions">Fecha de vigencia</th>
                     <th class="actions" style="width:20px">Activo</th>
                 </tr>
