--- a/app/views/personas/show.html.erb
+++ b/app/views/personas/show.html.erb
@@ -86,16 +86,16 @@
         <strong class="">Estado</strong>
       </span>
       <%= @persona.status.capitalize %></li>
-    <li class="list-group-item text-right">
+    <li class="list-group-item text-right text-capitalize">
       <span class="pull-left">
         <strong class="">Departamento</strong>
       </span>
-      <%= @persona.cargo.departamento.nombre.capitalize %></li>
-    <li class="list-group-item text-right">
+      <%= @persona.cargo.departamento.nombre %></li>
+    <li class="list-group-item text-right text-capitalize">
       <span class="pull-left">
         <strong class="">Cargo</strong>
       </span>
-      <%= @persona.cargo.nombre.capitalize%></li>
+      <%= @persona.cargo.nombre%></li>
     <li class="list-group-item text-right">
       <span class="pull-left">
         <strong class="">Sueldo Básico</strong>
