--- a/app/views/tipos/index.html.erb
+++ b/app/views/tipos/index.html.erb
@@ -162,7 +162,7 @@ Generar</button>
 <th class="actions" style="width: 34%;">Reportes</th>
 <th class="actions" style="width: 20%;">Listados</th>
 <% if !current_usuario.has_role?:regular%>
-<th class="actions" style="">Enviar Correos</th>
+<th class="actions" style="width: 22%;">Enviar Correos</th>
 <th class="actions" style="width: 100px;">Acciones</th>
 <%end%>
 </tr>
