--- a/app/views/requisitos/index.html.erb
+++ b/app/views/requisitos/index.html.erb
@@ -1,7 +1,7 @@
 <div class="page-header">
   <%= render 'layouts/nuevo', msg: "Nuevo Requisito", path: new_requisito_path ,x: Requisito %>
 
-  <h1><i class="fa fa-building-o"></i> Requisitos</h1>
+  <h1><i class="fa fa-list-alt"></i> Requisitos</h1>
 </div>
 <ul class="list-group">
   <li class="list-group-item text-muted" contenteditable="false">Lista de Requisitos</li>
